+ added paper upload page

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Docs chain</title>
+    <title>DocsChain</title>
 </head>
 <body>
-<button type="button">Upload paper</button>
+<form action="/paper-upload" method="get"><button type="submit">Upload paper</button></form>
 <br>
 <button type="button">Check paper NFT</button>
 </body>
