* store file after upload

--- a/web/static/paper_upload_page.html
+++ b/web/static/paper_upload_page.html
@@ -13,6 +13,9 @@
     <label>Upload your paper file</label>
     <input type="file" id="paperFile" name="paperFile" accept="application/pdf" required>
     <br>
+    <label>Upload your paper review file</label>
+    <input type="file" id="reviewFile" name="reviewFile" accept="application/pdf" required>
+    <br>
     <input type="submit" value="Upload">
 </form>
 </body>
