--- a/web/static/paper_upload_page.html
+++ b/web/static/paper_upload_page.html
@@ -37,12 +37,13 @@
     <b>Do not close this tab</b>
 </div>
 
-<div class="uploadResult">
+<div class="uploadResult" style="display: none;">
     <p>
         The paper was processed correctly. The NFT of your work is bellow.
     </p>
     <div class="resultingNFW">no-data</div>
 </div>
+
 <script src="../js/paper_upload_page.js"></script>
 
 </body>
