+ added additional field to upload form

--- a/web/html/paper_upload_page.html
+++ b/web/html/paper_upload_page.html
@@ -25,6 +25,10 @@
             <input type="text" id="uploaderSurname" name="uploaderSurname">
         </p>
         <p>
+            <label for="uploaderScienceDegree">Enter author science degree:</label>
+            <input type="text" id="uploaderScienceDegree" name="uploaderScienceDegree">
+        </p>
+        <p>
             <label>Upload your paper file:</label>
             <input type="file" id="paperFile" name="paperFile" accept="application/pdf" required>
         </p>
