+ added realization paper web ui side

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DocsChain</title>
+    <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
 <div id="buttonsContainer" class="buttonsContainer">
@@ -16,15 +17,15 @@
         <form id="uploadForm">
             <p>
                 <label for="paperFile">Upload your paper file:</label>
-                <input type="file" id="paperFile" name="paperFile" accept="application/pdf">
+                <input type="file" id="paperFile" accept="application/pdf">
             </p>
             <p>
                 <label for="paperTopic">Enter paper topic:</label>
-                <input type="text" id="paperTopic" name="paperTopic">
+                <input type="text" id="paperTopic">
             </p>
             <p>
                 <label for="paperDescription">Enter short paper description:</label>
-                <input type="text" id="paperDescription" name="paperDescription">
+                <input type="text" id="paperDescription">
             </p>
 
             <button id="addAuthorButton" onclick="addAuthor()">+</button>
@@ -49,15 +50,7 @@
         <b>Do not close this tab</b>
     </div>
 
-    <div id="addPaperResultView" class="addPaperResultView" style="display: none;">
-        <p>
-            The paper processing finished
-            <span style="color: #40ff2f;">successfully</span>.
-            <br>
-            The NFT of your work is bellow.
-        </p>
-        <div id="resultingNFW" class="resultingNFW">no-data</div>
-    </div>
+    <div id="addPaperResultView" class="addPaperResultView" style="display: none;"></div>
 </div>
 
 <div id="getPaperFormContainer" class="getPaperFormContainer" style="display: none;">
