+ added mocking and for others apo methods

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -9,7 +9,7 @@
 <div id="buttonsContainer" class="buttonsContainer">
     <button id="addPaperFormButton" class="addPaperFormButton" type="button" onclick="showAppPaperForm()">Add new file</button>
     <button id="getPaperFormButton" class="getPaperFormButton" type="button" onclick="showGetPaperForm()">Get file</button>
-    <button id="searchForPaperFormButton" class="searchForPaperFormButton" type="button" onclick="showSearchForPaperForm()">Get file</button>
+    <button id="searchForPaperFormButton" class="searchForPaperFormButton" type="button" onclick="showSearchForPaperForm()">Search for file</button>
 </div>
 
 <div id="appPaperFormContainer" class="addPaperFormContainer" style="display: none;">
@@ -70,9 +70,7 @@
         <b>Do not close this tab</b>
     </div>
 
-    <div id="getPaperResultView" class="getPaperResultView" style="display: none;">
-
-    </div>
+    <div id="getPaperResultView" class="getPaperResultView" style="display: none;"></div>
 </div>
 
 <div id="searchForPaperFormContainer" class="searchForPaperFormContainer" style="display: none;">
@@ -92,9 +90,7 @@
         <b>Do not close this tab</b>
     </div>
 
-    <div id="searchForPaperResultView" class="searchForPaperResultView" style="display: none;">
-
-    </div>
+    <div id="searchForPaperResultView" class="searchForPaperResultView" style="display: none;"></div>
 
 </div>
 
