fixed typo in <p>

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -19,13 +19,13 @@
             </div>
             <div>
                 <button id="getPaperFormButton" class="getPaperFormButton" type="button" onclick="showGetPaperForm()"><img class="get-icon" src="../static/images/3.png" alt=""> </button>
-                <p>Get image</p>
+                <p>Get file</p>
                 <a>You can receive your file back whenever you want.</a>
 
             </div>
             <div>
                 <button id="searchForPaperFormButton" class="searchForPaperFormButton" type="button" onclick="showSearchForPaperForm()"> <img class="search-icon" src="../static/images/4.png" alt=""></button>
-                <p>Search image</p>
+                <p>Search file</p>
                 <a>Do you need to find some work in our system?<br>
                     Do it in a few clicks! </a>
             </div>
